<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/txt_addtv"
        android:textColor="#FF0000"
        android:textSize="25dp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/txt_signup"
        android:textColor="#000000"
        android:textSize="40dp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/txtmasv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup"
        android:text="@string/txt_in_masv"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edtMaSv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtmasv"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/txt_hint_masv"
        android:inputType="text"
        android:textColor="#000000" />
    <TextView
        android:layout_below="@+id/edtMaSv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nhập tài khoản:"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/txtuser"></TextView>

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtuser"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="Tài khoản"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/txtpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtUser"
        android:text="@string/inputpass"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20dp"></TextView>

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpass"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="#000000" />
    <TextView
        android:layout_below="@+id/edtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/xnpass"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/txtxnpass"></TextView>

    <EditText
        android:id="@+id/edtxnPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtxnpass"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/repass"
        android:inputType="textPassword"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtxnPass"
        android:layout_marginLeft="100dp"
        android:backgroundTint="#000"
        android:layout_marginTop="10dp"
        android:text="Cancel"
        android:textColor="#ffc107" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtxnPass"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/btnCancel"
        android:layout_marginTop="10dp"
        android:backgroundTint="#000"
        android:text="Sign Up"
        android:textColor="#ffc107" />

</RelativeLayout>